--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   &nbsp;
   <div class="fancy">Hello</div>
   &nbsp;
+  <div class="fancy">MOBI IS THE BEST</div>
   <div class="rainbowfancy">:D</div>
   <div>hello</div>
 
@@ -82,11 +83,11 @@
 
     <div class="shooooooooooooooooooooort">
     <button class="looooooooooooooooooooong">
-      <img class="wiiiiiiiiiiiiiiiiiide" src="public/long.png"></img>
+    <img class="wiiiiiiiiiiiiiiiiiide" src="public/long.png"></img>
     </button>
     <div class="alert">
-      <span class="closebtn">&times;</span>  
-      <strong>Danger!</strong> Indicates a dangerous or potentially vicious looooooooooooooooooooong.
+    <span class="closebtn">&times;</span>  
+    <strong>Danger!</strong> Indicates a dangerous or potentially vicious looooooooooooooooooooong.
     </div> 
   </div>
 </body>
